--- a/ChatSocketWebClient/css/ChatSocket.css
+++ b/ChatSocketWebClient/css/ChatSocket.css
@@ -9,11 +9,11 @@
 }
 
 #ChatSocket .message {
-  flex: 1 0 16rem;
+  flex: 4 1 16rem;
 }
 
 #ChatSocket .data {
-  flex: 1 0 8rem;
+  flex: 1 1 8rem;
 }
 
 #ChatSocket .inline {
@@ -26,7 +26,7 @@
 
 #log {
   overflow: auto;
-  flex: 1;
+  flex: 1 0 20rem;
   background-color: #000;
   /* border: 1px solid var(--c24); */
   border-radius: 0.5rem;
@@ -34,20 +34,28 @@
   color: #fff;
   padding: 1rem;
   width: 100%;
-  min-height: 20rem;
   transition: border-color 125ms;
+}
+
+/* Edge, Safari */
+#log::-webkit-scrollbar-track {
+  background: var(--c12);
+}
+
+#log::-webkit-scrollbar-thumb {
+  background-color: var(--c24);
+  border: 1em solid var(--c12);
+}
+
+/* Chrome, Firefox */
+#log {
+  scrollbar-color: var(--c48) var(--c12);
 }
 
 /* #log:hover {
   border: 1px solid var(--c48);
 } */
 
-#log p {
+#log > span {
   white-space: pre;
-  margin: 0;
-  width: max-content;
-}
-
-#log a {
-  color: #fff;
 }
