--- a/ChatSocketWebClient/css/style.css
+++ b/ChatSocketWebClient/css/style.css
@@ -1,7 +1,7 @@
 @import './helper.css';
 @import './credits.css';
 @import './main.css';
-@import './ChatSocket.css';
+@import './chatSocket.css';
 @import './falling-chars.css';
 
 :root {
