--- a/ChatSocketWebClient/css/falling-chars.css
+++ b/ChatSocketWebClient/css/falling-chars.css
@@ -35,6 +35,7 @@
   pointer-events: none;
   filter: brightness(calc(0.25 + var(--scale)));
   animation: fall-out calc(2s * 1 / var(--scale)) 1 forwards cubic-bezier(0.333, 0, 0.667, 0.333);
+  z-index: calc(1 + var(--scale) * 10000);
 }
 
 @keyframes fall-out {
