--- a/ChatSocketWebClient/css/main.css
+++ b/ChatSocketWebClient/css/main.css
@@ -98,13 +98,13 @@ main .inline button {
 
 @media (max-width: 60em) {
   main {
-    margin: 2rem;
+    margin: 2rem 2rem 0 2rem;
   }
 }
 
 @media (max-width: 40em) {
   main {
-    margin: 2rem 1rem;
+    margin: 2rem 1rem 0 1rem;
   }
 
   main .label-container {
