--- a/ChatSocketWebClient/css/style.css
+++ b/ChatSocketWebClient/css/style.css
@@ -1,6 +1,6 @@
 @import './credits.css';
 @import './main.css';
-@import './chat-socket.css';
+@import './cs.css';
 @import './falling-chars.css';
 
 :root {
@@ -22,7 +22,7 @@ html {
   background-color: var(--bg);
   font-family: Montserrat, -apple-system, BlinkMacSystemFont, system-ui, 'Segoe UI', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
-  font-size: 16px;
+  font-size: 14px;
   color: var(--fg);
   min-height: 100dvh;
 }
