--- a/ChatSocketWebClient/css/style.css
+++ b/ChatSocketWebClient/css/style.css
@@ -62,3 +62,8 @@ input:-webkit-autofill:focus {
     padding: 2rem 1rem;
   }
 }
+
+.monospace {
+  font-family: monospace, Montserrat, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+}
