--- a/ChatSocketWebClient/css/style.css
+++ b/ChatSocketWebClient/css/style.css
@@ -18,13 +18,17 @@
 }
 
 html {
+  min-height: 100dvh;
+}
+
+html,
+dialog {
   scroll-behavior: smooth;
   background-color: var(--bg);
   font-family: Montserrat, -apple-system, BlinkMacSystemFont, system-ui, 'Segoe UI', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
   font-size: 14px;
   color: var(--fg);
-  min-height: 100dvh;
 }
 
 body {
