--- a/ChatSocketWebClient/css/main.css
+++ b/ChatSocketWebClient/css/main.css
@@ -8,7 +8,12 @@ main {
 }
 
 main h1 {
+  font-size: 2rem;
   color: var(--pri);
+}
+
+main h2 {
+  font-size: 2rem;
 }
 
 main h1,
@@ -60,18 +65,47 @@ main button {
   font-weight: bold;
   color: var(--pri);
   padding: 0.5rem 1rem;
+  height: 2.5rem;
   transition: background-color 125ms, color 125ms, border-color 250ms;
+}
+
+main button:has(svg) {
+  padding: 0.5rem;
+}
+
+main button svg {
+  fill: var(--pri);
+  width: 100%;
+  height: 100%;
+  transition: fill 125ms;
 }
 
 main button:is(:hover, :focus-visible) {
   background-color: var(--pri);
   color: var(--bg);
-  border-color: var(--pri);
+}
+
+main button:is(:hover, :focus-visible) svg {
+  fill: var(--bg);
 }
 
 main button:active {
   border-color: var(--fg);
   transition: none;
+}
+
+main button.error {
+  border-color: var(--err);
+  color: var(--err);
+}
+
+main button.error:is(:hover, :focus-visible) {
+  background-color: var(--err);
+  color: var(--fg);
+}
+
+main button.error:active {
+  border-color: var(--fg);
 }
 
 main label:has(.bytes) {
